Article on gc_less #6